welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: '=' expected but ';' found.
	if( a = b)
^