welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
	var rep
	if( a = b)
	{
		rep = a*b	
		return rep
	}
	else
	{
		rep = a+b
		return rep
	}
}
